# geant4_python_script_CMOS_OV5647

./: README.md
Geant4/Pixel_RGB_xy_emit/: CMakeLists.txt  Cs137_init_vis.mac  Edep_detec_all.py  Edep_pixel_all.py  Fe55_init_vis.mac  GNUmakefile  Sr90_init_vis.mac  ascii2array8bit.py  coinc.ods  debug.mac  init_vis.mac  macro_pixel_sim_g4_v1.py  macro_pixel_sim_g4_v9.py  pixel.cc  pixel.in  run1.mac  run2.mac  run_simu  vis.mac
Geant4/Pixel_RGB_xy_emit/include/: ActionInitialization.hh  Analysis.xhh  DetectorConstruction.hh  DetectorMessenger.hh  EnergyHit.hh  EnergySD.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  RunActionMessenger.hh  StackingAction.hh  SteppingAction.hh
Geant4/Pixel_RGB_xy_emit/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EnergyHit.cc  EnergySD.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  RunActionMessenger.cc  StackingAction.cc  SteppingAction.cc
Python_script/: calculate_summary.py  dat_difgauss_emit_ADC_oct_24_2024.py  fit_inv2_mean_std_26_ene_2025.py  gauss_RGB_dat_avgbg_cut_trsh_sig_27_oct_2024.py  gauss_RGB_mean_sig_num_adc_ag_26_oct_2024.py  gauss_cluster_data_21_fer_2025.py  hist_emit&edep_enery_mar_30_2025.py  plots11_comp_gauss_adc_cluster_source_sim_er2_test_chi2_ks_bins_15_ene_2025.py  plots_gaus_hist_adc_cluster_source_sim_test_chi2_ks_bins_mult_plot_25_ene_2025.py  plots_gaus_hist_adc_source_sim_test_chi2_bins_07_abr_2025.py  plots_hist_comp_gauss_adc_cluster_source_sim_er2_test_chi2_ks_bins_23_ene_2025.py  prom_ADC_plot_edep_obs_vs_edep_sim_08_abr_2025.py  prom_ADC_plot_obs_vs_sim_10_abr_2025.py  prom_comp_plot_sim_16_ene_2025.py  prom_plot_edep_obs_vs_edep_sim_08_abr_2025.py  prom_plot_sim_23_ene_2025.py
